CREATE TABLE "players" (
  "player_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "first_name" varchar(255) NOT NULL,
  "last_name" varchar(255) NOT NULL,
  "date_of_birth" date NOT NULL,
  "country" varchar(255) NOT NULL,
  "position" varchar(50) NOT NULL
);

CREATE TABLE "clubs" (
  "club_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "club_name" varchar(255) UNIQUE NOT NULL
);

CREATE TABLE "market_values" (
  "market_value_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "player_id" int NOT NULL,
  "date_of_value" date NOT NULL,
  "market_value_eur" int NOT NULL
);

CREATE TABLE "competitions" (
  "competition_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "competition_name" varchar(255) NOT NULL,
  "competition_country" varchar(255) NOT NULL
);

CREATE TABLE "seasons" (
  "season_id" varchar(12) PRIMARY KEY,
  "season_start" date NOT NULL,
  "season_end" date NOT NULL
);

CREATE TABLE "club_season_stats" (
  "club_id" int NOT NULL,
  "season_id" varchar(12) NOT NULL,
  "competition_id" int NOT NULL,
  "avg_possession" float NOT NULL,
  "goals" int,
  "assists" int,
  "xg" float,
  "npxg" float,
  "pen_made" int,
  "squad_size" int,
  "avg_age" float,
  PRIMARY KEY ("club_id", "season_id", "competition_id")
);

CREATE TABLE "player_season_stats" (
  "player_id" int NOT NULL,
  "club_id" int NOT NULL,
  "competition_id" int NOT NULL,
  "season_id" varchar(12) NOT NULL,
  "matches_played" int,
  "minutes_played" int,
  "matches_started" int,
  "goals" int,
  "non_pen_goals" int,
  "xg" float,
  "npxg" float,
  "assists" int,
  "xa" float,
  "pass_cmp" int,
  "pass_att" int,
  "total_pass_dist" int,
  "passes_short_cmp" int,
  "passes_short_att" int,
  "passes_med_cmp" int,
  "passes_med_att" int,
  "passes_long_cmp" int,
  "passes_long_att" int,
  "key_passes" int,
  "passes_final_3rd" int,
  "passes_pen_area" int,
  "crosses_pen_area" int,
  "prg_passes" int,
  "prg_passes_received" int,
  "prg_pass_dist" int,
  "passes_live_ball" int,
  "passes_dead_ball" int,
  "passes_cross" int,
  "passes_through_ball" int,
  "passes_switches" int,
  "sca" int,
  "sca_takeons" int,
  "sca_passes_live" int,
  "sca_passes_dead" int,
  "sca_shots" int,
  "sca_fouls_drawn" int,
  "sca_def_actions" int,
  "gca" int,
  "gca_takeons" int,
  "gca_passes_live" int,
  "gca_passes_dead" int,
  "gca_shots" int,
  "gca_fouls_drawn" int,
  "gca_def_actions" int,
  "shots" int,
  "shots_on_target" int,
  "avg_shot_dist" float,
  "shots_freekicks" int,
  "pen_made" int,
  "pen_att" int,
  "tackles" int,
  "tackles_won" int,
  "tackles_def_third" int,
  "tackles_mid_third" int,
  "tackles_atk_third" int,
  "dribblers_tackled_won" int,
  "dribblers_tackled_lost" int,
  "tackles_total_dribblers" int,
  "blocks" int,
  "block_shots" int,
  "block_passes" int,
  "interceptions" int,
  "clearances" int,
  "errors_to_shots" int,
  "touches" int,
  "touches_def_pen_area" int,
  "touches_def_3rd" int,
  "touches_mid_3rd" int,
  "touches_atk_3rd" int,
  "touches_atk_pen_area" int,
  "takeons_att" int,
  "takeons_successful" int,
  "tackled_during_takeons" int,
  "total_carry_dist" int,
  "prg_carry_dist" int,
  "prg_carries" int,
  "carries_final_third" int,
  "carries_pen_area" int,
  "miscontrols" int,
  "carries" int,
  "dispossessed" int,
  "passes_received" int,
  "yellow_cards" int,
  "red_cards" int,
  "fouls_committed" int,
  "fouls_drawn" int,
  "offside" int,
  "crosses" int,
  "pen_won" int,
  "pen_conceded" int,
  "own_goals" int,
  "ball_recoveries" int,
  "aerial_duels_won" int,
  "aerial_duels_lost" int,
  "goals_against_gk" int,
  "shots_on_target_against_gk" int,
  "shots_saved_gk" int,
  "clean_sheets_gk" int,
  "pen_att_gk" int,
  "pen_allowed_gk" int,
  "pen_saved_gk" int,
  "pen_missed_against_gk" int,
  "freekick_goals_against_gk" int,
  "cornerkick_goals_against_gk" int,
  "own_goals_scored_against_gk" int,
  "launched_passes_cmp_gk" int,
  "launched_passes_att_gk" int,
  "throws_att_gk" int,
  "passes_att_gk" int,
  "goal_kicks_att_gk" int,
  "avg_passes_dist_gk" float,
  "avg_goal_kick_dist_gk" float,
  "crosses_faced_gk" int,
  "crosses_stopped_gk" int,
  "def_actions_outside_box_gk" int,
  "avg_def_actions_dist_gk" float,
  "psxg_gk" float,
  PRIMARY KEY ("player_id", "club_id", "competition_id", "season_id")
);

ALTER TABLE "market_values" ADD FOREIGN KEY ("player_id") REFERENCES "players" ("player_id");

ALTER TABLE "club_season_stats" ADD FOREIGN KEY ("club_id") REFERENCES "clubs" ("club_id");

ALTER TABLE "club_season_stats" ADD FOREIGN KEY ("season_id") REFERENCES "seasons" ("season_id");

ALTER TABLE "club_season_stats" ADD FOREIGN KEY ("competition_id") REFERENCES "competitions" ("competition_id");

ALTER TABLE "player_season_stats" ADD FOREIGN KEY ("player_id") REFERENCES "players" ("player_id");

ALTER TABLE "player_season_stats" ADD FOREIGN KEY ("club_id") REFERENCES "clubs" ("club_id");

ALTER TABLE "player_season_stats" ADD FOREIGN KEY ("competition_id") REFERENCES "competitions" ("competition_id");

ALTER TABLE "player_season_stats" ADD FOREIGN KEY ("season_id") REFERENCES "seasons" ("season_id");
