```

Table players {
  player_id int [pk, increment, not null]
  first_name varchar(255) [not null]
  last_name varchar(255)  [not null]
  date_of_birth date [not null]
  country varchar(255) [not null]
  position varchar(50) [not null]
}

Table clubs {
  club_id int [pk, increment]
  club_name varchar(255) [unique, not null]
}

Table market_values {
  market_value_id int [pk, increment, not null]
  player_id int [ref: > players.player_id, not null]
  date_of_value date [not null]
  market_value_eur int [not null]
}

Table competitions {
  competition_id int [pk, increment]
  competition_name varchar(255) [not null]
  compettion_country varchar(255) [not null]
}

Table seasons {
  season_id int [pk, increment]
  season_start date [not null]
  season_end date [not null]
}

Table club_season_stats {
  club_id int [ref: > club.club_id, not null]
  season_id int [ref: > seasons.season_id, not null]
  competition_id int [ef: > competitions.competition_id, not null]
  possession_average float [not null]
  goals int
  assists int
  xG float
  npxG float
  penality int
  squad_size int
  age_average float

  indexes {
    (club_id, season_id,competition_id) [pk] 
  }
}

Table player_season_stats {
  player_id int [ref: > players.player_id, not null]
  club_id int [ref: > clubs.club_id, not null]
  competition_id int [ref: > competitions.competition_id, not null]
  season_id int [ref: > seasons.season_id, not null]
  matches_played int 
  minutes_played int
  matches_started int
  goals int 
  non_penalty_goals int
  xG float
  non_penalty_xG float
  assists int
  xA float
  pass_completions int
  pass_attempts int
  pass_distance_total int
  pass_completions_short int 
  pass_attempts_short int
  pass_completions_medium int
  pass_attempts_medium int
  pass_completions_long int
  pass_attempts_long int
  key_passes int
  passes_to_final_third int 
  passes_to_penalty_area int
  crosses_to_penalty_area int
  progressive_passes int
  progressive_carries int
  progressive_passes_received int
  progressive_pass_distance int
  passes_live_ball int 
  passes_dead_ball int
  pass_type_cross int
  pass_type_through_ball int 
  pass_type_switches int
  shot_creating_actions int
  sca_take_ons int
  sca_passes_live int
  sca_passes_dead int 
  sca_shots int
  sca_fouls_drawn int
  sca_defensive_actions int
  goal_creating_action int
  gca_take_ons int
  gca_passes_live int 
  gca passes_dead int
  gca_shots int
  gca_fouls_drawn int
  gca_defensive_actions int
  shots int
  shots_on_target int
  goal_per_shot int
  goal_per_shot_on_target int
  shot_distance_average float
  shots_freekicks int
  penalities int
  penalities_attempted int
  tackles_made int
  tackles_won int
  tackles_defensive_third int
  tackles_middle_third int
  tackles_attacking_third int
  tackles_success_dribblers int
  tackles_unsuccesful_dribblers int
  tackles_total_dribblers int
  blocks_total int
  block_shots int
  block_passes int
  









  indexes{
    (player_id, club_id, competition_id, season_id) [pk]
    
  }
}


